Financeiro/main/default/objects/Agrupador__c/Agrupador__c.object-meta.xml
<CustomObject>
    <label>Agrupador</label>
    <nameField>
        <label>Nome de Agrupador</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agrupadores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>