Financeiro/main/default/objects/Agrupador__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Agrupadores</relationshipLabel>
    <relationshipName>Agrupadores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>