Financeiro/main/default/objects/Agrupador__c/fields/perc_utilizado__c.field-meta.xml
<CustomField>
    <fullName>perc_utilizado__c</fullName>
    <formula>IF( Total_previsto__c = 0
, 0
, Total_utilizado__c / Total_previsto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% utilizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>