Financeiro/main/default/objects/Agrupador__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Período</label>
    <referenceTo>Periodo__c</referenceTo>
    <relationshipLabel>Agrupadores</relationshipLabel>
    <relationshipName>Agrupadores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>