Financeiro/main/default/objects/Agrupador__c/fields/Quantidade_estimados__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_estimados__c</fullName>
    <label>Quantidade de estimados</label>
    <summaryForeignKey>Estimado__c.Agrupador__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>