Financeiro/main/default/objects/Agrupador__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>IF(
 ISPICKVAL( Tipo__c, &apos;Crédito&apos; )
 , Total_utilizado__c
 , Total_previsto__c - Total_utilizado__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>