Financeiro/main/default/objects/Agrupador__c/fields/Situacao__c.field-meta.xml
<CustomField>
    <fullName>Situacao__c</fullName>
    <formula>IF(
  Total_previsto__c = 0
 , &apos;&apos;
,IF(
   perc_utilizado__c &gt;= 1.25
  , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Status Flag&quot;)
  , IF(
    perc_utilizado__c &gt; 1
    , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Status Flag&quot;)
    , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Status Flag&quot;)
  ) 
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação</label>
    <type>Text</type>
</CustomField>