Financeiro/main/default/objects/Agrupador__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Débito</fullName>
            </value>
            <value>
                <fullName>Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>