Financeiro/main/default/objects/Agrupador__c/fields/Total_previsto__c.field-meta.xml
<CustomField>
    <fullName>Total_previsto__c</fullName>
    <label>Total previsto</label>
    <summarizedField>Estimado__c.Valor_previsto__c</summarizedField>
    <summaryForeignKey>Estimado__c.Agrupador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>