Financeiro/main/default/objects/Agrupador__c/fields/Total_utilizado__c.field-meta.xml
<CustomField>
    <fullName>Total_utilizado__c</fullName>
    <label>Total utilizado</label>
    <summarizedField>Estimado__c.Valor_utilizado__c</summarizedField>
    <summaryForeignKey>Estimado__c.Agrupador__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>